--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,3 +10,5 @@
   {% include analytics.html %}
 </body>
 </html>
+
+i<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> 
