Update research interests.

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -73,7 +73,7 @@ layout: default
   <div style="display: block; block; width: 100%; clear:both;">
     <p>
       I am a PhD student at <a href="https://www.ucl.ac.uk/">University College London</a>, working with <a href="http://www0.cs.ucl.ac.uk/staff/n.mitra/">Niloy J. Mitra</a> and <a href="https://noamaig.github.io/">Noam Aigerman</a>.
-      My research lies at the intersection of geometry processing, computer graphics and deep learning.
+      My research lies at the intersection of computer vision, computer graphics and machine learning.
     </p>
   </div>
 </div>
