Add PhD Thesis and update Bio

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -70,8 +70,10 @@ layout: default
   </header>
   <div style="display: block; block; width: 100%; clear:both;">
     <p>
-      I am a PhD student at <a href="https://www.ucl.ac.uk/">University College London</a>, working with <a href="http://www0.cs.ucl.ac.uk/staff/n.mitra/">Niloy J. Mitra</a> and <a href="https://noamaig.github.io/">Noam Aigerman</a>.
+      I obtained my PhD from <a href="https://www.ucl.ac.uk/">University College London</a>, supervised by <a href="http://www0.cs.ucl.ac.uk/staff/n.mitra/">Niloy J. Mitra</a> and <a href="https://noamaig.github.io/">Noam Aigerman</a>. 
+      My studies were sponsored by <a href="https://www.ucl.ac.uk/foundational-ai-cdt/foundational-artificial-intelligence-mphilphd">FAI CDT</a>.
       My research lies at the intersection of computer vision, computer graphics and machine learning.
+      Prior to that, I obtained my MSc and BSc at <a href="https://www.polimi.it/en">Politecnico di Milano</a>.
     </p>
   </div>
 </div>
